# sigma-pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  pr-coverage-diff.yml
docs/: COVERAGE.md  coverage.json
rules/: t1003_001_lsass_dump.yml  t1021_001_rdp_unusual_source.yml  t1059_001_pwsh_encoded.yml  t1059_003_cmd_shell.yml  t1087_001_local_account_discovery.yml  t1105_certutil_download.yml  t1218_011_rundll32_abuse.yml  t1490_inhibit_system_recovery.yml  t1547_001_registry_run_keys.yml
scripts/: seed_demo.sh  seed_splunk_demo.py
splunk/dashboards/: sigma_overview.xml
src/sigma_pipeline/: cli.py  coverage.py  deploy.py  diff.py  lint.py  pysigma_backend.py  stats.py  test.py
tests/: test_coverage.py  test_deploy.py  test_diff.py  test_lint.py  test_pysigma_backend.py  test_stats.py
tests/fixtures/t1003_001_lsass_dump/negative/: procdump_non_lsass.json  regular_process.json
tests/fixtures/t1003_001_lsass_dump/positive/: comsvcs_minidump.json  mimikatz.json
tests/fixtures/t1021_001_rdp_unusual_source/negative/: outbound_rdp_to_external.json  rdp_from_internal_admin.json
tests/fixtures/t1021_001_rdp_unusual_source/positive/: rdp_from_external_attacker.json  rdp_from_public_ip.json
tests/fixtures/t1059_001_pwsh_encoded/negative/: normal_powershell.json
tests/fixtures/t1059_001_pwsh_encoded/positive/: encoded_command.json  encoded_pwsh7.json
tests/fixtures/t1059_003_cmd_shell/negative/: cmd_dir_listing.json
tests/fixtures/t1059_003_cmd_shell/positive/: cert_chain_wmic.json  curl_pipe_powershell.json
(+16 files in other folders)
